--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "server": "json-server --watch src/jobs.json --port 5000"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
     "axios": "^1.7.3",
     "json-server": "^1.0.0-beta.1",
     "primeicons": "^7.0.0",
+    "primevue": "^4.0.4",
     "vue": "^3.4.29",
     "vue-router": "^4.4.2",
-    "vue-spinner": "^1.0.4"
+    "vue-spinner": "^1.0.4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
